[tool.poetry]
name = "web-hw-12"
version = "0.1.0"
description = ""
authors = ["Mariia Bulavina"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.27"
fastapi = "^0.110.0"
alembic = "^1.13.1"
uvicorn = "^0.27.1"
psycopg2-binary = "^2.9.9"
email-validator = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
